...
                            <constraint firstItem="XVs-af-hKT" firstAttribute="top" secondItem="fPd-RX-8LX" secondAttribute="bottom" id="csi-kL-WIO"/>
                            <constraint firstItem="fPd-RX-8LX" firstAttribute="leading" secondItem="2o0-UN-LAX" secondAttribute="leading" id="g4E-L3-V32"/>
                            <constraint firstItem="fPd-RX-8LX" firstAttribute="trailing" secondItem="2o0-UN-LAX" secondAttribute="trailing" id="wIH-Uw-fKE"/>
                            <constraint firstItem="2o0-UN-LAX" firstAttribute="trailing" secondItem="XVs-af-hKT" secondAttribute="trailing" id="zEr-EX-Spx"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Locations" id="iGO-pH-CUL">
                        <barButtonItem key="rightBarButtonItem" title="Edit" id="jUa-oq-UXC">
                            <connections>
                                <action selector="editFavouriteCitiesList:" destination="YC8-6s-qsQ" id="rw5-dv-sTz"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Og-NQ-fF0">
                                <rect key="frame" x="20" y="109" width="374" height="128"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="kfp-7d-EeH">
                                        <rect key="frame" x="62" y="27.5" width="250" height="73"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Match Found!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zFq-on-lFA">
                                                <rect key="frame" x="0.0" y="0.0" width="250" height="26.5"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Try Searching for a different City." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="suo-Vh-raH">
...
                            <constraint firstItem="Szu-0e-d47" firstAttribute="trailing" secondItem="hyq-A9-a8q" secondAttribute="trailing" constant="20" id="Oh4-rB-j7g"/>
                            <constraint firstItem="n0o-EB-mFu" firstAttribute="leading" secondItem="Szu-0e-d47" secondAttribute="leading" constant="20" id="UOD-OP-Rip"/>
                            <constraint firstItem="hyq-A9-a8q" firstAttribute="leading" secondItem="Szu-0e-d47" secondAttribute="leading" constant="20" id="uir-zi-pRf"/>
                            <constraint firstItem="hyq-A9-a8q" firstAttribute="top" secondItem="Szu-0e-d47" secondAttribute="top" id="yza-iC-kdg"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Weather Update" id="J8j-3C-If5">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="magnifyingglass" catalog="system" id="bfK-0V-rgO">
                            <connections>
                                <action selector="navigationBarLeftItemAction:" destination="zjk-Vh-aZi" id="Lzz-kL-Xma"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
