...
    
    func setUpSearchBar() {
        if let searchController =  citySearchController {
            searchController.delegate = self
            searchController.searchBar.delegate = self
            searchController.searchResultsUpdater = searchResultCities
            searchController.searchBar.placeholder = "City"
            searchController.obscuresBackgroundDuringPresentation = false
            searchController.searchBar.translatesAutoresizingMaskIntoConstraints = true
            searchController.searchBar.barStyle = .default
            searchController.searchBar.frame = searchBarViewContainer.bounds
            searchController.searchBar.autoresizingMask = [.flexibleWidth]
            searchController.searchBar.showsBookmarkButton = true
...
